fixed logo and added spacing

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: pp-sans-big-regular,Helvetica Neue,Arial,sans-serif;
 }
 
 main {
-    padding-top: 15em;
+    font-size: 112.5%;
+    color: #2c2e2f;
+    font-weight: 400;
+    font-variant: normal;
 }
 
 h3, p {
@@ -12,10 +15,10 @@ h3, p {
 }
 
 .content {
-    /* margin: 10px; */
-    padding: 50px;
+    margin-top: 120px;
+    padding: 30px 10% 50px;
     border: 1px solid rgb(232, 232, 232);
-    border-radius: 10px;
+    border-radius: 12px;
 }
 
 img {
@@ -23,9 +26,21 @@ img {
 }
 
 input {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 20px, 10px, 0px;
     margin: 10px;
+}
+
+button {
+    width: 100%;
+    height: 48px;
+    min-height: 44px;
+    padding: 12px 32px;
+    border: 0;
+    display: block;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    background-color: #142c8e;
+    border-radius: 25px;   
 }
 
 /* button {
